# gen_cli

./: CHANGELOG.md  CMakeLists.txt  README.md
CLI/include/: cla_parser.h  cla_parser_api.h  cli.h  cli_api.h
CLI/src/: cla_parser.c  cli.c  main.c
helper/include/: dtypes.h  helper.h
helper/src/: helper.c
